# mlops-exercise-7

./: .coverage  .gitignore  README.md  app.py  pyproject.toml  tests.py
.github/workflows/: manual.yml  pull_request.yml
data/: credit_card_records.csv
models/: model.pkl
util/: generate.py
